<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="greenmonkey.simonsays.settingsActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text=""
                android:layout_width="90dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <TextView
                        android:gravity="left"
                        android:text="Slow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="right"
                        android:text="Fast"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                    </LinearLayout>
            </LinearLayout>
        </TableRow>
        <TableRow android:paddingBottom="25dp">
            <TextView
                android:text="@string/demo_speed"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />
            <SeekBar android:id="@+id/opt_demo_speed"
                android:max="100"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:paddingBottom="25dp">
            <TextView
                android:text="@string/game_speed"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />
            <SeekBar android:id="@+id/opt_game_speed"
                android:max="100"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:paddingBottom="25dp">
            <TextView
                android:text="@string/vibration"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="Off"
                android:textOn="On"
                android:id="@+id/opt_vibration" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/save_btn"
            android:text="Save"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/cancel_btn"
            android:text="Cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
